programs/tests/invalid_Programs/type-checker/inconsistent_arithmetic.kln
function main():integer
    true + 3
